[bug] fixing bug with scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 html {
-  overflow-y: scroll;
   scrollbar-color: rgba(255, 255, 255, 0.1) #282828;
 }
 
